--- a/index.html
+++ b/index.html
@@ -12,3 +12,36 @@
 
 </body>
 </html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>How we roll</title>
+</head>
+<body>
+<div class="container">
+    <div class="row">
+    <div class="card row">
+        <div class="card-body">
+            <h5 class="card-title">Flagg oppgave IS114</h5>
+            <a class="btn btn-primary" href="flagg_oppgave/canvasflagg.html">Canvas</a>
+            <a class="btn btn-primary" href="flagg_oppgave/pflagg.html">P</a>
+            <a class="btn btn-primary" href="flagg_oppgave/cssflagg.html">CSS</a>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="card row">
+        <div class="card-body">
+            <h5 class="card-title">How We Roll</h5>
+            <a class="btn btn-primary" href="how_we_roll/index.html">Forside</a>
+        </div>
+    </div>
+</div>
+    </div>
+</div>
+</div>
+</body>
