--- a/index.html
+++ b/index.html
@@ -1,47 +1,30 @@
-
- <!DOCTYPE html>
-<html>
-<head>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<title>Edge</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html> 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>How we roll</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--link til CSS dokument for styling-->
+  <link rel="stylesheet" href="./css/index.css">
+  <title>Egde-søknad</title>
 </head>
+
 <body>
-<div class="container">
-    <div class="row">
-    <div class="card row">
-        <div class="card-body">
-            <h5 class="card-title">Flagg oppgave IS114</h5>
-            <a class="btn btn-primary" href="flagg_oppgave/canvasflagg.html">Canvas</a>
-            <a class="btn btn-primary" href="flagg_oppgave/pflagg.html">P</a>
-            <a class="btn btn-primary" href="flagg_oppgave/cssflagg.html">CSS</a>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="card row">
-        <div class="card-body">
-            <h5 class="card-title">How We Roll</h5>
-            <a class="btn btn-primary" href="how_we_roll/index.html">Forside</a>
-        </div>
-    </div>
-</div>
-    </div>
-</div>
-</div>
+  <div class="frontpage">
+    <h1>FELLESSKAPET</h>
+      <p><b>A Group Project</b></p>
+      <h2><b>Click the button bellow to start the survey</b></h2>
+      <hr>
+      <!--Laget 2 knapper som dirigerer bruker videre til spørreundersøkelsen eller resultat-->
+      <button class="button button1" onclick="location.href='./søknad.html';">Søknad</button>
+      <button class="button button2" onclick="location.href='./cv.html';">CV</button>
+  </div>
+
+  <div class="footer">
+    <p>Fellesskapet</p>
+  </div>
+
 </body>
+
+</html>
