--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--link til CSS dokument for styling-->
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./index.css">
   <title>Egde-søknad</title>
 </head>
 
