--- a/cv-pages/martin-cv.html
+++ b/cv-pages/martin-cv.html
@@ -1,1 +1,1 @@
-<embed src="../cv/Martin_Steiro_CV.pdf" type="application/pdf"   height="100%" width="100%">
+<iframe src="../cv/Martin_Steiro_CV.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
