--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="frontpage">
-    <h1>FELLESSKAPET</h>
+    <h1>FELLESSKAPET</h1>
       <p><b>A Group Project</b></p>
       <h2><b>Click the button bellow to start the survey</b></h2>
       <hr>
