fiksa cver og diverse

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     a.button {
       display: inline-block;
       padding: 2px 4px;
-      background-color: #63676a; /* Blue color for the button */
+      background-color: #63676a; 
       color: white;
       text-decoration: none;
       border-radius: 5px;
     }
 
     a.button:hover {
-      background-color: #0056b3; /* Darker blue color on hover */
+      background-color: #0056b3; 
     }
 
   </style>
@@ -46,12 +46,22 @@
     <!--Ruben-->
 
     <h2><img src="bilder/ruben.jpg" width="170" height="170" border="2" hspace="95"></h2>
-    <h2><b>Ruben Teikari | <a href="søknad.html" class="button">CV</a></b></h2>
+    <h2><b>Ruben Teikari | <a href="cv-pages/ruben-cv.html" class="button">CV</a></b></h2>
 
     <!--Martin-->
 
     <h3><img src="bilder/martin.png" width="170" height="170" border="2" hspace="95"></h3>
-    <h3><b>Martin Steiro | <a href="søknad.html" class="button">CV</a></b></h3>
+    <h3><b>Martin Steiro | <a href="cv-pages/martin-cv.html" class="button">CV</a></b></h3>
+
+    <!--Jonas-->
+
+    <h4><img src="bilder/jonas.jpg" width="170" height="170" border="2" hspace="95"></h4>
+    <h4><b>Jonas Fritzøe Hovdenak | <a href="cv-pages/jonas-cv.html" class="button">CV</a></b></h4>
+
+    <!--Johannes-->
+
+    <h5><img src="bilder/johannes.jpg" width="170" height="170" border="2" hspace="95"></h5>
+    <h5><b>Johannes Tjøstheim | <a href="cv-pages/johannes-cv.html" class="button">CV</a></b></h5>
 
 
 </div>
