--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
       background-color: #0056b3; 
     }
 
+    .right-div {
+    width: 790px; /* Adjust as needed */
+    height: 1120px; /* 100% of the viewport height */
+    background-color: #ccc;
+    position: relative; /* Fixed position so it stays in place */
+    top: -130px;
+    left: 480px;
+    z-index: 999; /* Ensure it's on top of other content */
+  }
+
+  .right-div p {
+    font-size: large;
+    padding-top: 20px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+
   </style>
 
   <meta charset="UTF-8">
@@ -65,6 +81,13 @@
 
 
 </div>
+
+<div class="right-div">
+  <!-- Content for the right side div -->
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt iste voluptas modi odit, omnis hic a voluptatem. Excepturi illum atque voluptatum optio quos pariatur modi distinctio, ducimus temporibus consectetur? Velit.</p>
+</div>
+
+
 
 </body>
 
