fiksa på css litt

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt iste voluptas modi odit, omnis hic a voluptatem. Excepturi illum atque voluptatum optio quos pariatur modi distinctio, ducimus temporibus consectetur? Velit.</p>
 </div>
 
+<div class="footer">
 
+</div>
 
 </body>
 
