--- a/index.html
+++ b/index.html
@@ -12,28 +12,26 @@
  
   <div class="index-container">
     <div class="div-class0"><img src="bilder/ruben.jpg" width="210" height="210" border="2"></div>
-    <div class="div-class1"><img src="bilder/martin.png" width="210" height="210" border="2"></div>
     <div class="div-class2"><img src="bilder/johannes.jpg" width="230" height="210" border="2"></div>
     <div class="div-class3"><img src="bilder/jonas.jpg" width="210" height="210" border="2"></div>
   </div>
 
   <div class="tekst-container">
     <div class="div-tekst0"><b>Ruben Teikari <a href="cv-pages/ruben-cv.html" class="button">CV</a></b></div>
-    <div class="div-tekst1"><b>Martin Steiro <a href="cv-pages/martin-cv.html" class="button">CV</a></b></div>
     <div class="div-tekst2"><b>Johannes Tjøstheim <a href="cv-pages/johannes-cv.html" class="button">CV</a></b></div>
     <div class="div-tekst3"><b>Jonas Fritzøe Hovdenak <a href="cv-pages/jonas-cv.html" class="button">CV</a></b></div>
   </div>
 
   <div class="form">
     <p>Hei!</p>
-    <p>Vi er en gruppe på fire IT-studenter ved Universitetet i Agder og ønsker med stor interesse å søke om praksisplass hos dere nesete semester, høsten 2024.  </p>
+    <p>Vi er en gruppe på tre IT-studenter ved Universitetet i Agder og ønsker med stor interesse å søke om praksisplass hos dere nesete semester, høsten 2024.  </p>
     <p>Nylig fikk vi besøk av tre av deres kollegaer gjennom emne om informasjonssystemsikkerhet. Der fikk vi et innblikk i hvordan dere som organisasjon arbeider – hovedsakelig rettet mot sikkerhetsprosjekter – men også på en generell basis. Dette møtet, samt de tidligere sammenkomstene UiA og Egde har hatt, har plassert Egde Consulting på radaren vår over bedrifter vi gjerne vil jobbe med. Av den grunn er vi veldig glade for å få anledningen til å søke hos dere. </p>
     <p>Gjennom studiet har gruppen tilnærmet seg mye kunnskap om hvordan informasjonssystemer utvikles og brukes, samt hvilken effekt IT har på oss mennesker og samfunnet. Studiet har også mye prosjektarbeid med eksterne aktører, hvor vi har lært verdien av god kommunikasjon og samarbeid, samt verdien av en god tilnærming mot utfordringer og problemer. Gjennom prosjektene har vi også erfart hvilke personer vi jobber best med og fått reflektert rundt hvorfor. Disse prosjektene har omhandlet mye forskjellig, inkludert kode-intensive prosjekter. Vårt mest relevante – og største – prosjekt har vært utviklingen av en webapplikasjon for oppdragsgiver. Under prosjektet jobbet vi gruppevis med prosjektstyring, systemanalyse, programmering i C#s MVC modell, samt databasehåndtering og containerisering. </p>
     <p>Som gruppe besitter vi også en helhetlig forståelse for brukersiden av informasjonssystemer. Gruppen har – gjennom ulike jobber – en god forståelse av problemer og utfordringer brukere ofte erfarer, samt hvordan de kan løses. Denne kunnskapen mener vi vil gi oss en god tilnærming for utvikling av produkter og tjenester som har brukeren i fokus. For at en gruppe skal kunne gjennomføre et godt arbeid er det kritisk at alle gruppemedlemmene er i et miljø de føler seg trygge i. Innad i gruppen har vi som utgangspunkt blitt kjent gjennom vennskap. Dette fundamentet har bygd opp samarbeidet vårt med et solid grunnlag for psykologisk trygghet. Gjennom dette har gruppen fått erfaring av gleden brukerne får av gode digitale løsninger, samt hvordan dårlige løsninger hindrer og stresser de. </p>
     <p>Ser fram til å høre fra dere og håper vi får muligheten til å presentere oss nærmere i et intervju. </p>
     <br>
     <p>Med vennlig hilsen,</p>
-    <p>Jonas Fritzøe Hovdenak, Johannes Tjøstheim, Martin Steiro & Ruben Teikari</p>
+    <p>Jonas Fritzøe Hovdenak, Johannes Tjøstheim & Ruben Teikari</p>
   </div>
 </body>
 </html>
