--- a/cv-pages/ruben-cv.html
+++ b/cv-pages/ruben-cv.html
@@ -1,1 +1,1 @@
-<iframe src="../cv/Ruben_Teikari_CV.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+<iframe src="../cv/Ruben Teikari CV.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
